feat(venue): expose configured Python operations